--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -46,26 +46,19 @@
                     </div>   
                             <div class="Introduction">
                                 <h2>Introduction : les bases de l'intelligence artificielle</h2>
-                                <ul>
                             <p>
                                     <h3>Une notion apparue dans les années 50</h3>
                                     <p> Elle est directement liée à la montée en puissance des données , à l’évolution des technologies et à l’utilisation des données sur Internet. En effet, en une cinquantaine d’années on a eu une très grande évolution des données dans trois dimensions, appelées les 3V : vitesse, volume, variété. L’utilisation de l’intelligence artificielle est basée sur des algorithmes de ces données, afin de pouvoir proposer des solutions aux personnes souhaitant combiner ces données.</p>
-                                        <ul>
-                                            <li>Préparation et modification de contrats</li>
-                                            <li>Mise en conformité des clauses RGPD</li>
-                                            <li>Préparation de formation et de conseils aux entreprises</li>
-                                        </ul>
                             </p>
                             <p>
-                                    <h3>Chargée de Clientèle en Assurance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
-                                <p><em>Juillet/Août 2021 et Juin 2020 à Janvier 2021</em></p>
-                                        <ul>
-                                            <li>Réception et émission d'appels</li>
-                                            <li>Accueillir les déclarations sinistres des sociétaires, détecter leurs besoins pour apporter les premières solutions et les accompagner dans la gestion de leurs dossiers</li>
-                                            <li>Tâches administratives et saisies de données informatiques</li>
-                                        </ul>
-                            </p>
-                            <p>
+                                    <h3>Quelles sont les 3V du Big Data ?</h3>
+                                    <ul>VOLUME</ul>
+                                    <p>Le volume représente l’ensemble des données que les entreprises ont à traiter. Ce dernier est tous les jours de plus en plus important car la quantité de données générées et traitées par les entreprises et les personnes ne cessent d’augmenter. Il semble alors important de pouvoir gérer l’importance de ces données. Le Big Data est le seul à pouvoir traiter cette importance des données.</p>
+                                    <ul>VITESSE</ul>
+                                    <p>Si de plus en plus de données sont générées, elles le sont à une vitesse conséquente. La vitesse représente effectivement la rapidité à laquelle les données affluent. Il faut que l’accès aux données soit immédiat, et donc permettre un partage dès l’obtention des données. En effet, avec l’évolution de l’affluence des données, elles deviennent rapidement obsolètes.</p>
+                                    <ul>VARIETE</ul>
+                                    <p>La génération des données étant réalisée par les entreprises mais également par les personnes, l’ensemble de ces données est très varié. Il va regrouper les données personnelles des personnes, qu’elles vont partager sur les réseaux sociaux, en remplissant des questionnaires en ligne, ou encore les informations contenues dans les téléphones portables. On peut retrouver les informations concernant la géolocalisation, les enregistrements audios, les photos ou encore les vidéos.
+Il faut alors constater que la combinaison des trois V représente bien la complexité et la diversité des données qu'on peut avoir aujourd’hui mais également la nécessité d’adapter leur traitement. Elles sont de plus en plus nombreuses, de plus en plus différentes. Elles doivent rester accessibles par tous, à tout moment, tout en respectant une certaine protection des données. Dans l’objectif de comprendre l’apparition et le développement de l’intelligence artificielle, il convient de comprendre la notion de Big Data.</p>
                                 <h3>Chargée de Clientèle dans l'enseignement à distance chez <a href="https://www.comdatagroup.com/fr/qui-sommes-nous/">COMDATA</a></h3>
                     <p><em>Mai à Août 2019</em></p>
                                         <ul>
