--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -12,7 +12,7 @@
         <div class="rapport-container">
         <img id="banhaut" src="ImagesPW/IA.jpeg" alt="BanHaut" />
             <div class="left-column">
-                <img class="portrait" src="Images/identité.jpeg" height="200px" width="300px" border-radius="15%" />
+                <img class="portrait" src="ImagesPW/portrait.jpeg" height="200px" width="300px" border-radius="15%" />
                 <div class="section">
                     <p>
                     </p>
