--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -29,7 +29,7 @@
                     <br>
                     <br>
                     <p>
-                        <ul class="sommaires">
+                        <ul class="sommaire">
                             SOMMAIRE
                             <li>Introduction : les bases de l'intelligence artificielle</li>
                             <li>Conférence : Maël Pegny</li>
