--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -84,20 +84,11 @@ De plus, les technologies déployées qui embarquent une intelligence artifici
 <p>La <a href="https://www.cnil.fr">CNIL</a>, ses homologues et le contrôleur européen de la protection des données ont adopté un avis sur la proposition de règlement de la Commission européenne sur l'intelligence artificielle. Cela montre donc bien que ce sujet est central au sein de l’UE et vient poser plusieurs questions juridiques majeures. Les pères fondateurs des protecteurs des droits des données sont totalement réfractaires à l’idée que de telles données soient collectées sans un consentement clair des personnes visées par cette dernière.
 
 Pour eux la technologie est trop puissante face aux capacités juridique. Si on vient à accepter que la RF soit mise en place sur une grande échelle de population centralisée alors on rompt avec la tradition. D’où le désir de l’Union Européenne de contrer ce manque juridique et de venir mettre en place un règlement qui visera à encadrer le cadre légal de la mise en place et de l’utilisation de telles technologies. Juridiquement, le projet de règlement sur l'intelligence artificielle montre la nécessité de tracer des limites aux futurs usages de ces technologies. Il est mis en avant dans ce projet le désir de construire un règlement qui veut un usage éthique et conscient des risques encourus par ces technologies au sein de l’espace public notamment. Les différentes autorités ouvertes à la consultation de ce projet ont cependant souligné le fait qu’il fallait élargir les cas interdisant l’usage de ces technologies et de bien définir ces cas interdits pour assurer un usage non abusif de ces technologies comme la reconnaissance faciale qui peuvent constituer de véritables risques. </p>
-                            <ul>
-                                <li>Recherche et rédaction de réponses sur les questions juridiques pour les adhérents</li>
-                                <li>Rédactioins de clauses RGPD et de protections des données personnelles</li>
-                                <li>Participation à l'organisation d'un forum de l'emploi virtuel</li>
-                            </ul>
-                        <h3>Stage découverte dans le cabinet d'avocat <a href="https://www.acty-avocats.fr">ACTY</a></h3>
-                                <p><em>Février 2018</em></p>
-                            <ul>
-                                <li>Découverte du métier d'avocats</li>
-                                <li>Classement de preuves</li>
-                                <li>Présence à une audience après analyse du dossier</li>
-                            </ul>    
-                    </p>
-                </ul>
+                        
+                        <h3>Opinions personnelles</h3>
+                                <p><em>Opinions sur l'ensemble des conférence</em></p>
+                           <p>Nous nous accordons sur le fait que l’intelligence artificielle fait partie des sujets que nous avons le plus appréciés. Une conférence donnée par Maître Hayek qui portait sur l’encadrement juridique de l’intelligence artificielle a été une conférence qui nous a particulièrement intéressées. Cette conférence devait aborder les règles que l’on tente de mettre de place pour pallier le manque juridique qui entoure cette nouvelle technique qu’est l’intelligence artificielle. En effet, aujourd’hui l’intelligence artificielle fait partie intégrante de notre quotidien et elle présente des risques, d’où l’importance d’encadrer juridiquement cette technique.  
+                           </p> 
                         </div>
                         <div>
                             <h2>MES DIPLÔMES</h2>
