--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -18,10 +18,11 @@
                     </p>
                 </div>
                 <div class="section">
+                <h1>L'INTELLIGENCE ARTIFICIELLE</h1>
                   <h1>A PROPOS DU MAITRE DE CONFERENCE</h1>
                     <p>
                         <ul class="information">
-                            <li>PRÉNOM ET NOM : MAEL PEGNY</li>
+                            <li>PRÉNOM ET NOM : <a href="https://www.theses.fr/177305037">MAEL PEGNY</a></li>
                             <li>POSTE : CHERCHEUR POSTDOCTORAL</li>
                         </ul>
                     </p>
@@ -44,7 +45,6 @@
 </div>
                 <div class="right-column">
                     <div class="header">
-                        <h1>L'INTELLIGENCE ARTIFICIELLE</h1>
                     </div>   
                             <div class="Introduction">
                                 <h2>Introduction : les bases de l'intelligence artificielle</h2>
