--- a/controle-PW-Lemonnier-2022/ex2.html
+++ b/controle-PW-Lemonnier-2022/ex2.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="ex2.css" />
     </head>
     <body>
-        <div class="section">
         <h1> Rapport de conférence : l'intelligence artificielle </h1>
         <div class="rapport-container">
         <img id="banhaut" src="ImagesPW/IA.jpeg" alt="BanHaut" />
@@ -18,11 +17,11 @@
                     <p>
                     </p>
                 </div>
-                <h1>L'INTELLIGENCE ARTIFICIELLE</h1>
+                <div class="section">
                   <h1>A PROPOS DU MAITRE DE CONFERENCE</h1>
                     <p>
                         <ul class="information">
-                            <li>PRÉNOM ET NOM : <a href="https://www.theses.fr/177305037">MAEL PEGNY</a></li>
+                            <li>PRÉNOM ET NOM : <li>PRÉNOM ET NOM : <a href="https://www.theses.fr/177305037">MAEL PEGNY</a>MAE</li></li>
                             <li>POSTE : CHERCHEUR POSTDOCTORAL</li>
                         </ul>
                     </p>
